--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 Имаме много банани да изядем
 преди средни котки 
-себе си да се наречем. 
+себе си да наречем. 
 
 Но помни ни Мишо, не ни забравяй! 
 Не забравяй тез бели нощи, 
