Tweaked the font-size a bit

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div class="modal-bg">
         <div class="modal">
             <span class="modal-exit--action">❌</span>
-            <h3 class="verse-heading">На прощаване</h3>
             <div class="verse-wrapper">
+                <h3 class="verse-heading">На прощаване</h3>
                 <pre class="verse-text">
 Не плачи Мишо, не тъжи
 Че стажа вече свърши - 
@@ -41,8 +41,7 @@
 
 Но помни ни Мишо, не ни забравяй! 
 Не забравяй тез бели нощи, 
-и тез мийтинги среднощни...
-                </pre>
+и тез мийтинги среднощни...</pre>
             </div>
         </div>
     </div>
